--- a/Rental/View/daftarriwayatadmin.resx
+++ b/Rental/View/daftarriwayatadmin.resx
@@ -117,4 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnkonfirmasi.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMoAAAA6CAYAAADx98axAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAADKSURBVHhe7dOhEYAwAMBAJunKsB9j4AsIBALuMsCLV9FZ
+        xjb3sZ0n8Gfu9yhfAXgzCgRGgcAoEBgFAqNAYBQIjAKBUSAwCgRGgcAoEBgFAqNAYBQIjAKBUSAwCgRG
+        gcAoEBgFAqNAYBQIjAKBUSAwCgRGgcAoEBgFAqNAYBQIjAKBUSAwCgRGgcAoEBgFAqNAYBQIjAKBUSAw
+        CgRGgcAoEBgFAqNAYBQIjAKBUSAwCgRGgcAoEBgFAqNAYBQIjALBMtZ5fAXgsc7jAkVwTnEwOs9sAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
 </root>
